we have added script for filtering by Army number,Region,Brigade and batallion

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 REACT_APP_API_URL=http://localhost:5000
+//for database connection
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=Canada@2026!
+DB_NAME=military_mis
